<resources>


    <string name="app_name">OnlineShopEffectiveTestWork</string>
    <!-- Strings related to login -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--screens -->
    <string name="login">Вход</string>
    <string name="main">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="cart">Корзина</string>
    <string name="discounts">Акции</string>
    <string name="profile">Профиль</string>
    <string name="favourites">Избранное</string>

    <!--login screen -->
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="sign_in">Войти</string>
    <string name="loyalty_program">Нажимая кнопку "Войти", Вы принимаете\n<u>условия программы лояльности</u> </string>
    <string name="text_validation_success">Успешно</string>
    <string name="text_validation_error_empty_field">Пожалуйста, заполните текстовое поле!</string>
    <string name="text_validation_error">Текст может содержать только кириллицу!</string>
    <string name="phone_mask">+7 (___) ___-__-__</string>
    <string name="please_enter_full_phone_number">Пожалуйста, введите полный номер телефона!</string>

    <!--catalog screen -->
    <string-array name="spinner_array">
        <item>По популярности</item>
        <item>По увеличению цены</item>
        <item>По уменьшению цены</item>
    </string-array>
    <string name="filters">Фильтры</string>
    <string name="show_all">Смотреть все</string>
    <string name="face">Лицо</string>
    <string name="body">Тело</string>
    <string name="suntan">Загар</string>
    <string name="mask">Маска</string>
    <string name="loading_error">Не удалось загрузить данные. \n Возможо, нет связи с сервером.</string>

    <!--profile screen -->
    <string name="cabinet">Личный кабинет</string>
    <string name="shops">Магазины</string>
    <string name="Support">Обратная связь</string>
    <string name="license">Оферта</string>
    <string name="refund">Возврат товара</string>
    <string name="exit">Выйти</string>
    <string name="no_items">Нет добавленных товаров</string>

    <!--details screen -->
    <string name="hide">Скрыть</string>
    <string name="description">Описание</string>
    <string name="parameters">Характеристики</string>
    <string name="more">Подробнее</string>
    <string name="add_to_card">Добавить в корзину</string>


</resources>