<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.catalog.CatalogFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_sort"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_sort"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/appCompatButton"
        app:layout_constraintEnd_toStartOf="@+id/appCompatButton"
        app:layout_constraintStart_toEndOf="@+id/im_sort" />

    <Button
        android:id="@+id/appCompatButton"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:pointerIcon="arrow"
        android:text="@string/filters"
        android:textAllCaps="false"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="?attr/colorOnSecondary"
        app:icon="@drawable/ic_filters"
        app:iconSize="24dp"
        app:iconTint="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton">


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="4dp"
                android:textColor="@color/text_chip_state_list"
                android:text="@string/show_all"
                app:checkedIconEnabled="false"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:closeIcon="@drawable/ic_close_small"
                app:closeIconTint="@color/white"
                app:closeIconSize="10dp"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_face"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textColor="@color/text_chip_state_list"
                android:text="@string/face"
                app:checkedIconEnabled="false"
                app:closeIconTint="@color/white"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:closeIcon="@drawable/ic_close_small"
                app:closeIconSize="10dp"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_body"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/body"
                android:textColor="@color/text_chip_state_list"
                app:checkedIconEnabled="false"
                app:closeIconTint="@color/white"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:closeIcon="@drawable/ic_close_small"
                app:closeIconSize="10dp"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_suntan"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/suntan"
                android:textColor="@color/text_chip_state_list"
                app:checkedIconEnabled="false"
                app:closeIconTint="@color/white"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:closeIcon="@drawable/ic_close_small"
                app:closeIconSize="10dp"
                app:closeIconVisible="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mask"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/mask"
                android:textColor="@color/text_chip_state_list"
                app:checkedIconEnabled="false"
                app:closeIconTint="@color/white"
                app:chipBackgroundColor="@color/bg_chip_state_list"
                app:closeIcon="@drawable/ic_close_small"
                app:closeIconSize="10dp"
                app:closeIconVisible="false" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_loading_error"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/loading_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>